--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   get: ^4.6.6
   flutter_svg: ^2.0.7
   google_fonts: ^6.2.1
+  shared_preferences: ^2.5.3 # Or the latest version
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
