--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,12 @@ dependencies:
   get: ^4.6.6
   flutter_svg: ^2.0.7
   google_fonts: ^6.2.1
-  shared_preferences: ^2.5.3 # Or the latest version
+  shared_preferences: ^2.5.3
+  app_settings: ^5.1.1
+  #flutter_reactive_ble: ^5.2.0
+  #just_audio: ^0.9.39
+  # audio_session: ^0.1.16
+  #permission_handler: ^11.3.1
 
 
   # The following adds the Cupertino Icons font to your application.
