--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   intl: ^0.18.0
   get: ^4.6.6
   flutter_svg: ^2.0.7
+  flutter_tts: ^4.2.3
   google_fonts: ^6.2.1
 
   # The following adds the Cupertino Icons font to your application.
