--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   google_fonts: ^6.2.1
   shared_preferences: ^2.5.3
   app_settings: ^5.1.1
+  http: ^1.1.0
+  dio: ^5.3.2
+  path_provider: ^2.1.1
+  audioplayers: ^5.2.1
   #flutter_reactive_ble: ^5.2.0
   #just_audio: ^0.9.39
   # audio_session: ^0.1.16
