--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dio: ^5.3.2
   path_provider: ^2.1.1
   audioplayers: ^5.2.1
+  flutter_bluetooth_serial: ^0.4.0
   #flutter_reactive_ble: ^5.2.0
   #just_audio: ^0.9.39
   # audio_session: ^0.1.16
