--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     
     <application
-        android:label="my_app"
+        android:label="NeuroKit"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
